Fixed the alignment for stars and genres

--- a/src/features/media/media.scss
+++ b/src/features/media/media.scss
@@ -212,17 +212,3 @@
 .rate > label:hover ~ input:checked ~ label {
     color: #c59b08;
 } 
-.starsLine{
-    display: inline-block;
-}
-.starsPosition{
-    position: absolute;
-    left:7%;
-    bottom:78%;
-}
-
-.genresPosition{
-    position: absolute;
-    left:7%;
-    bottom:51%;
-}
